--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "langgraph>=0.2.0",
     "pypdf>=4.0.0",
+    "groq>=0.4.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
